manifests/jupyter/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jupyter-ingress
spec:
  rules:
    - host: lab.algorinfo.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name:  jupyter-svc
                port:
                  number: 80
